refactor: update dependencies and middleware for better security
- Update Next.js to 14.2.22 and fix vulnerabilities\n- Replace @supabase/auth-helpers-nextjs with @supabase/ssr\n- Update middleware to use new Supabase SSR client\n- Update image config to use remotePatterns

--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@shadcn/ui": "latest",
-    "@supabase/auth-helpers-nextjs": "^0.9.0",
-    "@supabase/auth-helpers-react": "^0.4.2",
+    "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.39.0",
     "@types/js-cookie": "^3.0.6",
     "@types/ua-parser-js": "^0.7.39",
@@ -53,12 +52,12 @@
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.284.0",
-    "next": "^14.1.0",
+    "next": "14.2.22",
     "next-auth": "^4.24.10",
     "next-themes": "^0.3.0",
-    "react": "^18.2.0",
+    "react": "18.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.2.0",
     "react-error-boundary": "^4.0.13",
     "react-resizable-panels": "^2.1.4",
     "recharts": "^2.12.7",
